# get-pi-monte-carlo

./: .gitignore  README.md  biome.json  mypy.ini  package.json  pyproject.toml
app/: index.html  vite.config.mjs
app/src/: App.svelte  main.ts
server/: main.py
